--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
     "log4js": "^6.1.2",
-    "mongodb": "^3.5.5"
+    "mongodb": "^3.5.5",
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
