--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2"
+    "eslint-plugin-import": "^2.20.2",
+    "mocha": "^7.1.2",
+    "sinon": "^9.0.2"
   }
 }
