--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,4 +1,5 @@
 {
+    "name": "default",
     "type": "postgres",
     "host": "localhost",
     "port": 5432,
@@ -8,7 +9,7 @@
     "synchronize": true,
     "logging": false,
     "entities": [
-       "src/entity/**/*.ts"
+       "src/entities/**/*.ts"
     ],
     "migrations": [
     ],
