--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "dotenv": "^8.2.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.29",
-    "uuid": "^8.3.1"
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@types/jest": "^26.0.16",
