--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/main.js\"",
-    "test": "jest"
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/main.js\""
   },
   "repository": {
     "type": "git",
@@ -25,13 +24,10 @@
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.16",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
     "concurrently": "^5.3.0",
-    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
-    "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   }
 }
