--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/main.js\""
+    "dev": "NODE_ENV=dev concurrently \"tsc -w\" \"nodemon dist/main.js\"",
+    "migrate": "node dist/migrations/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "bunyan": "^1.8.15",
     "discord.js": "^12.5.0",
     "dotenv": "^8.2.0",
+    "mongodb": "^3.6.4",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.29"
