--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord-reply-bot",
+  "name": "discordjs-reply-bot",
   "version": "0.1.0",
   "description": "",
   "scripts": {
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/heanzyzabala/discord-reply-bot.git"
+    "url": "git+https://github.com/heanzyzabala/discordjs-reply-bot.git"
   },
   "author": "Heanzy Zabala",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/heanzyzabala/discord-reply-bot/issues"
+    "url": "https://github.com/heanzyzabala/discordjs-reply-bot/issues"
   },
-  "homepage": "https://github.com/heanzyzabala/discord-reply-bot#readme",
+  "homepage": "https://github.com/heanzyzabala/discordjs-reply-bot#readme",
   "dependencies": {
     "@hzabala/tsconfig": "^0.1.0",
     "@types/bunyan": "^1.8.6",
