--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "dev": "NODE_ENV=dev concurrently \"tsc -w\" \"nodemon dist/main.js\"",
-    "migrate": "node dist/migrations/index.js"
+    "dev": "NODE_ENV=dev concurrently \"tsc -w\" \"nodemon dist/main.js\" | bunyan -o short",
+    "compile": "tsc -p .",
+    "migrate": "NODE_ENV=dev concurrently \"tsc -w\" \"nodemon dist/migrations/index.js\""
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,6 @@
   "dependencies": {
     "@hzabala/tsconfig": "^0.1.0",
     "@types/bunyan": "^1.8.6",
-    "bunyan": "^1.8.15",
     "discord.js": "^12.5.0",
     "dotenv": "^8.2.0",
     "mongodb": "^3.6.4",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
+    "bunyan": "^1.8.15",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.1.2"
