--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
     "@types/bunyan": "^1.8.6",
     "discord.js": "^12.5.0",
     "dotenv": "^8.2.0",
-    "mongodb": "^3.6.4",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "bunyan": "^1.8.15"
   },
   "devDependencies": {
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.4.0",
-    "bunyan": "^1.8.15",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.1.2"
